--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DB_HOST=107.180.1.16
-DB_USER=3306
+DB_PORT=3306
+DB_USER=cis440fall2025team5
 DB_PASSWORD=cis440fall2025team5
 DB_NAME=cis440fall2025team5
 JWT_SECRET=cis440fall2025team5
